# test-release-script

./: CHANGELOG.md  package.json
.ng-dev/: config.ts  github.ts  merge.ts  release.ts
dev-infra/pr/merge/defaults/: branches.ts  labels.ts  lts-branch.ts
dev-infra/release/: base-release-task.ts  cli.ts  config.ts
dev-infra/release/config/: index.ts
dev-infra/release/publish/: BUILD.bazel  actions.ts  cli.ts  constants.ts  external-commands.ts  index.ts  npm-publish.ts
dev-infra/release/publish/actions/: configure-next-as-major.ts  cut-lts-patch.ts  cut-new-patch.ts  cut-next-prerelease.ts  cut-release-candidate.ts  cut-stable.ts  move-next-into-feature-freeze.ts
dev-infra/release/publish/test/: BUILD.bazel  common.spec.ts  configure-next-as-major.spec.ts  cut-lts-patch.spec.ts  cut-new-patch.spec.ts  cut-next-prerelease.spec.ts  cut-release-candidate.spec.ts  cut-stable.spec.ts  github-api-testing.ts  move-next-into-feature-freeze.spec.ts  test-utils.ts  virtual-git-client.ts  virtual-git-matchers.ts
dev-infra/release/set-dist-tag/: BUILD.bazel  cli.ts
dev-infra/release/stage/: actions.ts  cli.ts  github-urls.ts  graphql-queries.ts  index.ts
dev-infra/release/stage/actions/: configure-next-as-major.ts  cut-new-patch.ts  cut-next-prerelease.ts  cut-release-candidate-prerelease.ts  (+4 more)
dev-infra/release/versioning/: active-release-trains.ts  index.ts  long-term-support.ts  npm-publish.ts  print-active-trains.ts  release-trains.ts
dev-infra/utils/: BUILD.bazel  child-process.ts  config.ts
dev-infra/utils/git/: github.ts
dev-infra/utils/testing/: index.ts
