load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "publish",
    srcs = glob([
        "**/*.ts",
    ]),
    module_name = "@angular/dev-infra-private/release/publish",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/pr/merge",
        "//dev-infra/release/config",
        "//dev-infra/utils",
        "@npm//@octokit/rest",
        "@npm//@types/inquirer",
        "@npm//@types/node",
        "@npm//@types/node-fetch",
        "@npm//@types/semver",
        "@npm//@types/yargs",
        "@npm//inquirer",
        "@npm//node-fetch",
        "@npm//ora",
        "@npm//semver",
        "@npm//typed-graphqlify",
    ],
)
