load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "dist-tag",
    srcs = glob([
        "**/*.ts",
    ]),
    module_name = "@angular/dev-infra-private/release/dist-tag",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/release/config",
        "//dev-infra/utils",
        "@npm//@types/node",
        "@npm//@types/yargs",
    ],
)
